fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: 100%/1.3;
-  font-family: "Denk One", sans-serif;
+  font: normal 100%/1.3 Georgia, serif;
+
 }
 
 *, *::before, *::after {
@@ -35,11 +35,8 @@ figure {
 h2 {
   margin: 0;
   font-size: 1.5rem;
+  font-family: "Denk One", sans-serif;
 
-}
-
-p {
-  font-family: Georgia, serif;
 }
 
 figcaption {
@@ -85,7 +82,6 @@ figcaption {
   }
 
 }
-
 
 @media only screen and (min-width: 90em) {
 
